testdata/baselines/reference/compiler/varianceModifiersOnClassMembers.errors.txt
varianceModifiersOnClassMembers.tlua(3,1): error TS1434: Unexpected keyword or identifier.
varianceModifiersOnClassMembers.tlua(3,1): error TS2304: Cannot find name 'class'.
varianceModifiersOnClassMembers.tlua(3,7): error TS1434: Unexpected keyword or identifier.
varianceModifiersOnClassMembers.tlua(3,7): error TS2304: Cannot find name 'C'.
varianceModifiersOnClassMembers.tlua(4,3): error TS1109: Expression expected.
varianceModifiersOnClassMembers.tlua(4,6): error TS2304: Cannot find name 'x'.
varianceModifiersOnClassMembers.tlua(4,8): error TS1005: ';' expected.
varianceModifiersOnClassMembers.tlua(5,3): error TS1434: Unexpected keyword or identifier.
varianceModifiersOnClassMembers.tlua(5,3): error TS2304: Cannot find name 'out'.
varianceModifiersOnClassMembers.tlua(5,7): error TS2304: Cannot find name 'y'.
varianceModifiersOnClassMembers.tlua(10,3): error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.


==== varianceModifiersOnClassMembers.tlua (11 errors) ====
    // https://github.com/microsoft/typescript-go/issues/4123
    
    class C {
    ~~~~~
!!! error TS1434: Unexpected keyword or identifier.
    ~~~~~
!!! error TS2304: Cannot find name 'class'.
          ~
!!! error TS1434: Unexpected keyword or identifier.
          ~
!!! error TS2304: Cannot find name 'C'.
      in x = 1;
      ~~
!!! error TS1109: Expression expected.
         ~
!!! error TS2304: Cannot find name 'x'.
           ~
!!! error TS1005: ';' expected.
      out y = 2;
      ~~~
!!! error TS1434: Unexpected keyword or identifier.
      ~~~
!!! error TS2304: Cannot find name 'out'.
          ~
!!! error TS2304: Cannot find name 'y'.
    }
    
    local isIn = "x" in { x = 1 };
    for k = 1, 1 do
      console.log(k);
      ~~~~~~~
!!! error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
    end
    